--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/eurovision_judge
 spring.datasource.username=eurovision_judge_user
 spring.datasource.password=eurovision_judge_user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.error.include-message=always
